--- a/docker/nginx/conf/vhosts/lo.beta.conf
+++ b/docker/nginx/conf/vhosts/lo.beta.conf
@@ -1,8 +1,8 @@
     server {
         listen      80;
-        server_name lo.wp.com lo.wp.jp;
+        server_name lo.beta.com lo.beta.jp;
         rewrite ^(.*)$ https://${server_name}$1 permanent;
-        root        /www/esrgear.com;
+        root        /www/www_beta;
 
         location / {
 		  try_files $uri /index.php$uri$is_args$args;
@@ -22,8 +22,8 @@
 
 server {
         listen      443 ssl;
-        server_name lo.wp.com lo.wp.jp;
-        root        /www/esrgear.com;
+        server_name lo.beta.com lo.beta.jp;
+        root        /www/www_beta;
         ssl_certificate vhosts/ssl.crt;
         ssl_certificate_key vhosts/ssl.key;
 
