--- a/docker/lnmp/mysql/my.cnf
+++ b/docker/lnmp/mysql/my.cnf
@@ -18,7 +18,7 @@
 # sort_buffer_size = 2M
 # read_rnd_buffer_size = 2M
 
-sql_mode=STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION
+# sql_mode=STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION
 
 # Remove leading # to revert to previous value for default_authentication_plugin,
 # this will increase compatibility with older clients. For background, see:
